# claude-custom-connector-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  .trivyignore  CLAUDE.md  README.md  docker-compose.tunnel.yml  docker-compose.yml  env.example
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  scanning.yml
deploy/aws/: Pulumi.yaml  README.md  __main__.py  userdata.sh
deploy/host/: README.md  mcp-reconciler.service  reconcile.py
docs/: ARCHITECTURE.md  DEPLOY.md  GATEKEEPER.md  SETUP.md
docs/deploy/: aws.md  local.md
scripts/: add-tunnel-route.sh  install-system.sh  new-tool.sh  preview-widget.py
scripts/system/: mcp-tools.sudoers
scripts/templates/: Dockerfile.template  unit.template
security/: __init__.py  serve.py  test_approval.py  test_auth.py  test_reconciler.py  test_serve.py  test_stack.py
security/approval/: gating.py  manage_widget.py  middleware.py  widget_spike.py
security/egress-proxy/: README.md  local.conf  squid.compose.conf  squid.conf
security/eval/garak/: README.md  eval_guardrail.py  pyproject.toml
security/guardrail/: __init__.py  middleware.py
security/ingress/: README.md  cloudflared.config.yml
shared/: __init__.py
tools/browser/: Dockerfile  deploy.json  entrypoint.sh  env.example  package-lock.json  package.json  server.py  test_browser.py
tools/data/: .gitignore  Dockerfile  README.md  bars.py  env.example  feeds.py  lake.py  lean_export.py  normalize.py  pipeline.py  requirements.txt  runs.py  schema.py  server.py  store.py  test_data.py
tools/gatekeeper/: README.md  (+4 more)
(+77 files in other folders)
