[project]
name = "guardrail-eval"
version = "0.1.0"
description = "Layer-4 verification (Pillar B): red-team the guardrail service. eval_guardrail.py measures detection vs false-positive rate; garak for deeper probes."
requires-python = ">=3.10,<3.13"
dependencies = [
    "httpx>=0.27",
    # garak is the deep red-team corpus (promptinject / latentinjection / agent_breaker).
    # Pin via uv.lock after first resolve (THREAT-MODEL Layer 5).
    "garak>=0.9.0",
]
